--- a/css/style.css
+++ b/css/style.css
@@ -11,5 +11,45 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../assets/engin-akyurt-Hlkuojv_P6I-unsplash\ \(1\).jpg);
+    background-image: url(../assets/fundo-login.jpg);
+    background-repeat: no-repeat;
+    background-size: cover
+}
+
+.login {
+    width: 300px;
+    height: 300px;
+    background-color: #fafafa40;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.login form {
+    padding: 16px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    height: 26px;
+    border: none;
+    border-radius: 4px;
+    padding: 4px;
+}
+
+input:focus {
+    outline: none;
+    border: 1px solid darkblue;
+    box-shadow: 0px 0px 4px white;
+}
+
+input::placeholder {
+    color: #2a2a2a;
 }
