--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,12 @@ body {
     width: 300px;
     height: 300px;
     background-color: #fafafa40;
-    border-radius: 10px;
+    border-radius: 15px;
     display: flex;
     justify-content: center;
     align-items: center;
+    backdrop-filter: blur(4px);
+    box-shadow: 0px 0px 8px #fafafa;
 }
 
 .login form {
@@ -52,4 +54,71 @@ input:focus {
 
 input::placeholder {
     color: #2a2a2a;
+}
+
+a {
+    color: #fafafa;
+    text-decoration: none;
+    transition: 0.5s;
+}
+
+a:hover {
+    color: turquoise;
+}
+
+input[type="submit"] {
+    width: 180px;
+    height: 30px;
+    border-radius: 30px;
+    border: 1px solid rgb(0, 180, 180);
+    background-color: rgb(0, 180, 180);
+    transition: 0.5s;
+}
+
+input[type="submit"]:hover {
+    background-color: teal;
+    border: 1px solid rgb(0, 56, 56);
+}
+
+.persistente {
+    position: relative;
+    width: 100%;
+    height: 32px;
+}
+
+.switch {
+    position: absolute;
+    display: inline-block;
+    width: 48px;
+    height: 24px;
+    z-index: 1;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: #fafafa;
+    transition: 0.5s;
+    border-radius: 100px;
+}
+
+.slider::before {
+    content: "";
+    position: absolute;
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #646464;
+    border-radius: 50%;
 }
