--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,8 @@ a {
 }
 
 a:hover {
-    color: turquoise;
+    color: rgb(0, 180, 180);
+    outline: #646464;
 }
 
 input[type="submit"] {
@@ -91,7 +92,6 @@ input[type="submit"]:hover {
     display: inline-block;
     width: 48px;
     height: 24px;
-    z-index: 1;
 }
 
 .switch input {
@@ -109,7 +109,6 @@ input[type="submit"]:hover {
     bottom: 0;
     background-color: #fafafa;
     transition: 0.5s;
-    border-radius: 100px;
 }
 
 .slider::before {
@@ -121,4 +120,26 @@ input[type="submit"]:hover {
     bottom: 4px;
     background-color: #646464;
     border-radius: 50%;
+    transition: 0.5s;
+}
+
+.round {
+    border-radius: 12px;
+}
+
+input:checked+.slider {
+    background-color: rgb(0, 180, 180);
+    transition: 0.5s;
+}
+
+input:checked+.slider::before {
+    transform: translateX(24px);
+}
+
+.slider::after {
+    content: "Mantenha-me conectado";
+    color: #fafafa;
+    width: 200px;
+    left: 52px;
+    position: absolute;
 }
