--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
     width: 100%;
     height: 100vh;
     display: flex;
+    gap: 15px;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background-image: url(../assets/fundo-login.jpg);
@@ -142,4 +144,25 @@ input:checked+.slider::before {
     width: 200px;
     left: 52px;
     position: absolute;
+}
+
+.criar-conta {
+    width: 300px;
+    height: 100px;
+    background-color: #fafafa40;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(4px);
+    box-shadow: 0px 0px 8px #fafafa;
+}
+
+.criar-conta p {
+    color: white;
+}
+
+.criar-conta a {
+    color: rgb(0, 180, 180);
+    outline: #646464;
 }
